--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     padding: 10px;
     box-shadow: 6px 6px 3px #8B4513;
     background-color: #DEB887;
+    margin: auto;
 }
 .character {
     width: 310px;
