--- a/Matching Game FEND/css/app.css
+++ b/Matching Game FEND/css/app.css
@@ -17,11 +17,9 @@ body {
 }
 
 body {
-	background: url(../img/abstract-dew-fresh-207355.jpg);
-	background-size: cover;
-	font-family: 'Coda', cursive;
-	color: blanchedalmond; 
-	}
+	background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    font-family: 'Coda', cursive;
+}
 
 .container {
 	display: flex;
@@ -33,23 +31,16 @@ body {
 h1 {
 	font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    color: blanchedalmond; 
 }
-
-.moves {
-    color: blanchedalmond;
-}
-
 
 /*
  * Styles for the deck of cards
  */
 
-
 .deck {
 	width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #fffacd 0%, #784919 100%);
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
@@ -76,12 +67,9 @@ h1 {
 
 .deck .card.open {
 	transform: rotateY(0);
-	background: #02b3e4;
-	cursor: default;
-	animation-name: flipInY;
-	-webkit-backface-visibility: visible !important;
-	backface-visibility: visible !important;
-	animation-duration: 0.9s;
+    background: #02b3e4;
+    cursor: default;
+	
 }
 
 .deck .card.show {
@@ -90,22 +78,18 @@ h1 {
 
 .deck .card.match {
 	cursor: default;
-	background: url('../img/207355.jpg');
-	font-size: 33px;
-	animation-name: tossing;
-	-webkit-animation-name: tossing;	
-	animation-duration: 2.5s;	
-	-webkit-animation-duration: 2.5s;
-	opacity: 0.7;
+    background: #02ccba;
+    font-size: 33px;
+	
 }
 
-.deck .card.unmatched {
-	animation-name: pulse;
-	-webkit-backface-visibility: visible !important;
-	backface-visibility: visible !important;
-	animation-duration: 0.9s;
-	background: #ff8181;
+
+
+.deck .card.disabled {
+	pointer-events: none;
+	opacity: 0.9;
 }
+
 
 /*
  * Styles for the Score Panel
@@ -114,32 +98,34 @@ h1 {
 
 .score-panel {
 	text-align: left;
-	margin-bottom: 10px;
+    width: 345px;
+    margin-bottom: 10px;
 }
 
 .score-panel .stars {
 	margin: 0;
-	padding: 0;
-	display: inline-block;
-	margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    margin: 0 5px 0 0;
 }
 
 .score-panel .stars li {
 	list-style: none;
 	display: inline-block;
-	
 }
 
 .score-panel .restart {
 	float: right;
 	cursor: pointer;
-	padding-left: 200px;
+}
+
+.fa-star {
+	color: #FFD700;
 }
 
 .timer {
 	display: inline-block;
-	margin: 0 5px 0 0;
-	padding-left: 70px;
+	margin: 0 1rem;
 }
 
 
@@ -148,26 +134,24 @@ h1 {
  */
 
 
-.overlay {
+.layer {
 	position: fixed;
-	width: 70%;
-
-	top: 10;
-	bottom: 10;
-	left: 10;
-	right: 10;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	background: rgba(0, 0, 0, 0.7);
 	transition: opacity 500ms;
 	visibility: hidden;
-	opacity: 0.5;
+	opacity: 0;
 }
 
-.overlay:target {
+.layer:target {
 	visibility: visible;
 	opacity: 1;
 }
   
-.popup_menu {
+.winner_panel {
 	margin: 70px auto;
 	padding: 20px;
 	background: #000000;
@@ -175,27 +159,33 @@ h1 {
 	width: 85%;
 	position: relative;
 	transition: all 5s ease-in-out;
-	font-family: 'Coda', cursive;
+	font-family: 'Gloria Hallelujah', cursive;
 	opacity: 0.5;
 }
   
-.popup .close {
+.winner h2 {
+	margin-top: 0;
+	color: #333;
+	font-family: Tahoma, Arial, sans-serif;
+}
+
+.winner .close {
 	position: absolute;
-	top: 10px;
-	right: 20px;
+	top: 20px;
+	right: 30px;
 	transition: all 200ms;
 	font-size: 30px;
 	font-weight: bold;
 	text-decoration: none;
-	color: blanchedalmond;
+	color: #333;
 }
 
-.popup .close:hover {
-	color:  blanchedalmond;
+.winner .close:hover {
+	color: #E5F720;
 }
 
-.popup .congrats, 
-.score {
+.winner .content-1,
+.content-2 {
 	max-height: 30%;
 	overflow: auto;
 	text-align: center;
@@ -212,54 +202,16 @@ h1 {
 
 #play-again {
 	background-color: #141214;
-	padding: 0.7rem 0.7rem;
+	padding: 0.7rem 1rem;
 	font-size: 1.1rem;
 	display: block;
 	margin: 0 auto;
-	width: 23%;
-	font-family: 'Coda', cursive;
-	color: blanchedalmond;
+	width: 50%;
+	font-family: 'Gloria Hallelujah', cursive;
+	color: #ffffff;
 	border-radius: 5px;
 }
 
-/* animations */
-@keyframes flipInY {
-0%, from {
-transform: perspective(200px) rotateY(180deg);
-}
-40% {
-transform: perspective(200px) rotateY(-10deg);
-}
-70% {
-transform: perspective(200px) rotateY(10deg);
-}
-100%, to {
-transform: perspective(200px) rotateY(0deg);
-}
-}
 
-@keyframes tossing {
-	0% {
-		transform: rotate(-4deg);	
-	}
-	50% {
-		transform: rotate(4deg);
-	}
-	100% {
-		transform: rotate(-4deg);	
-	}						
-}
 
-@keyframes pulse {
-	from {
-		transform: scale3d(1, 1, 1);
-	}
 
-	50% {
-		transform: scale3d(1.2, 1.2, 1.2);
-	}
-
-	to {
-		transform: scale3d(1, 1, 1);
-	}
-}
